make current-line-stops-container a fixed height of 60vh, and make it scrollable with overflow-y

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@
   flex-direction: column;
   align-items: center;
   width: 50%;
+  height: 60vh;
+  overflow-y: scroll;
 }
 .current-line-stop-container {
   display: flex;
